# redshank

./: .env.example  .gitignore  .gitleaks.toml  .markdownlint.json  AGENTS.md  CHANGELOG.md  Cargo.toml  FETCHER_DISCOVERY_ANALYSIS.md  IMPLEMENTATION_PLAN.md  PROGRESS.md  README.md  SECURITY.md  credentials.example.json  deny.toml  plan.toml  settings.example.json
.cargo/: audit.toml  config.toml
.githooks/: pre-commit
.github/workflows/: auto-tag.yml  ci.yml  codeql.yml  dependency-review.yml  docs.yml  publish.yml  release.yml  scorecard.yml  security.yml
docs/: book.toml
docs/src/: README.md  SUMMARY.md
docs/src/architecture/: cqrs-events.md  engine.md  hexagonal-ddd.md  overview.md  security.md  stygian-fallback.md  wiki-graph.md
docs/src/data-sources/: campaign-finance.md  corporate-registries.md  courts-leaks.md  environmental-reference.md  government-contracts.md  individual-osint.md  overview.md  sanctions.md
docs/src/development/: adding-fetcher.md  contributing.md  testing.md
docs/src/getting-started/: configuration.md  installation.md  quickstart.md
docs/src/usage/: cli.md  investigations.md  tui.md
docs/theme/: custom.css
redshank-cli/: Cargo.toml  build.rs
redshank-cli/src/: main.rs  setup.rs
redshank-cli/tests/: tui_pty.rs
redshank-core/: Cargo.toml
redshank-core/src/: adapters.rs  application.rs  domain.rs  lib.rs  ports.rs
redshank-core/src/adapters/: persistence.rs  providers.rs  tool_defs.rs  tools.rs  wiki_graph.rs
redshank-core/src/adapters/persistence/: credential_store.rs  mod.rs  replay_log.rs  settings_store.rs  sqlite.rs  workspace_config_store.rs
redshank-core/src/adapters/providers/: anthropic.rs  browser_fallback.rs  builder.rs  mod.rs  openai_compat.rs
redshank-core/src/adapters/tools/: coraline.rs  filesystem.rs  mod.rs  patching.rs  shell.rs  stygian.rs  web.rs
redshank-core/src/application/: commands.rs  queries.rs  services.rs
redshank-core/src/application/commands/: configure_credentials.rs  delete_session.rs  run_investigation.rs  update_provider_configuration.rs  update_source_configuration.rs
redshank-core/src/application/queries/: get_configured_providers.rs  get_configured_sources.rs  get_session.rs  get_wiki_entry.rs  list_sessions.rs  pol_analytics.rs  recall_entity_observations.rs  recall_observations.rs
redshank-core/src/application/services/: condensation.rs  engine.rs  session_runtime.rs
redshank-core/src/domain/: agent.rs  auth.rs  credentials.rs  errors.rs  events.rs  observation.rs  session.rs  settings.rs  source_catalog.rs  temporal.rs  wiki.rs
redshank-core/src/ports/: fetcher.rs  model_provider.rs  observation_store.rs  replay_log.rs  session_store.rs  tool_dispatcher.rs  wiki_store.rs  workspace_config.rs
redshank-core/tests/: integration.rs
redshank-fetchers/: Cargo.toml
redshank-fetchers/pipelines/county_property/: miami_dade.toml  nyc_acris.toml
redshank-fetchers/pipelines/linkedin_public/: config.toml
redshank-fetchers/pipelines/social_profiles/: config.toml
redshank-fetchers/pipelines/state_sos/: delaware.toml  florida.toml  nevada.toml  wyoming.toml
redshank-fetchers/pipelines/username_enum/: platforms.toml
redshank-fetchers/src/: client.rs  domain.rs  fallback.rs  lib.rs
redshank-fetchers/src/fetchers/: amazon_authors.rs  assessor_portals.rs  australia_dfat_sanctions.rs  blockchain_explorer.rs  bls_qcew.rs  bluesky.rs  canada_corporations.rs  canada_sema_sanctions.rs  carbon_registries.rs  census_acs.rs  cfpb.rs  cftc.rs  clinical_trials.rs  cms_open_payments.rs  common_crawl.rs  county_property.rs  courtlistener.rs  crunchbase.rs  defi_protocols.rs  delaware_franchise_tax.rs  epa_echo.rs  epa_superfund.rs  eu_bris.rs  eu_sanctions.rs  exchange_transparency.rs  faa_nnumber.rs  fara.rs  fda_warnings.rs  fdic.rs  fec.rs  federal_audit.rs  fincen_boi.rs  finra_brokercheck.rs  fpds.rs  france_infogreffe.rs  ftc.rs  gdelt.rs  germany_handelsregister.rs  github_profile.rs  gitlab_profile.rs  (+61 more)
redshank-tui/: Cargo.toml
redshank-tui/src/: crossterm_reader.rs  domain.rs  event_loop.rs  lib.rs  renderer.rs
tasks/: T01-workspace-scaffold.md  T02-domain-types.md  T03-credentials.md  T04-settings.md  T05-security-model.md  T06-provider-anthropic.md  T07-provider-openai-compat.md  T08-provider-builder.md  T09-tool-defs.md  T10-workspace-tools.md  T11-patching.md  T12-stygian-integration.md  T13-replay-logger.md  T14-context-condensation.md  T15-agent-engine.md  T16-wiki-graph.md  T17-session-store.md  T18-fetcher-framework.md  T19-fetchers-core.md  T20-fetchers-extended.md  T21-fetchers-osint.md  T22-tui-ratatui.md  T23-cli-entrypoint.md  T24-integration-tests.md  T25-coraline-mcp-tools.md  T26-readme-and-agents-md.md
