[workspace]
resolver = "2"
members = [
    "redshank-core",
    "redshank-tui",
    "redshank-fetchers",
    "redshank-cli",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "AGPL-3.0-or-later"
authors = ["Nick Campbell <s0ma@protonmail.com>"]
repository = "https://github.com/greysquirr3l/redshank"
rust-version = "1.94"

[workspace.dependencies]
# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4", features = ["derive"] }

# HTTP
reqwest = { version = "0.12", features = ["json", "stream"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Graph
petgraph = "0.7"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Testing
tempfile = "3"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Workspace crates
redshank-core = { path = "redshank-core" }
redshank-tui = { path = "redshank-tui" }
redshank-fetchers = { path = "redshank-fetchers" }
