[workspace]
resolver = "2"
members = [
    "redshank-core",
    "redshank-tui",
    "redshank-fetchers",
    "redshank-cli",
]

# Transitive dependency version collisions are outside our control.
# Allow this cargo lint so it doesn't mask actionable code-quality warnings.
[workspace.lints.clippy]
multiple_crate_versions = "allow"

[workspace.package]
edition = "2024"
version = "0.2.0"
license = "AGPL-3.0-or-later"
authors = ["Nick Campbell <s0ma@protonmail.com>"]
repository = "https://github.com/greysquirr3l/redshank"
rust-version = "1.94"

[workspace.dependencies]
# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4", features = ["derive"] }

# HTTP
reqwest = { version = "0.13", features = ["json", "stream", "query"] }

# Database
rusqlite = { version = "0.38", features = ["bundled"] }

# Graph
petgraph = "0.8"

# TUI
ratatui = "0.30"
crossterm = "0.29"

# Testing
tempfile = "3"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Hashing / encoding / regex (tool layer)
crc32fast = "1"
base64 = "0.22"
regex = "1"

# Workspace crates
redshank-core = { path = "redshank-core" }
redshank-tui = { path = "redshank-tui" }
redshank-fetchers = { path = "redshank-fetchers" }

# Stygian (browser automation + graph scraping)
stygian-browser = "0.9"
stygian-graph = { version = "0.9", default-features = false }

# Archiving
zip = "2"

# Secure password input (no terminal echo)
rpassword = "7"
