[package]
name = "redshank-cli"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "CLI entry point for the Redshank investigation agent"
readme = "../README.md"
keywords = ["osint", "cli", "investigation", "agent", "llm"]
categories = ["command-line-utilities"]

[[bin]]
name = "redshank"
path = "src/main.rs"

[dependencies]
redshank-core = { workspace = true, features = ["runtime"] }
redshank-tui = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true, features = ["env"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
portable-pty = "0.9"

[lints]
workspace = true
